--- a/templates/sandbox.html
+++ b/templates/sandbox.html
@@ -8,8 +8,8 @@
     <title>CS50X CAPSTONE</title>
 
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.2/dist/morph/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
@@ -23,15 +23,22 @@
 
 <body>
     <div class="container-fluid vh-100 d-flex flex-column">
-        <h1 class="text-center mt-auto">Launch</h1>
+        <h1 class="text-center mt-auto">Sandbox</h1>
         <form class="container-fluid mt-3 mb-auto" id="table-form">
             <div class="d-flex flex-column">
                 <div id="input-container" class="row border border-5 bg-info bg-gradient shadow shadow-5 p-5">
                     <div class="col d-flex flex-column p-0">
-                        <div class="col">
-                            <input id="route-input" placeholder="Enter Route" class="form-control border border-5 border-secondary" required>
+                        <div id="table-container" class="d-flex">
+                            <div id="index-container" class="col-2 d-flex flex-column p-0 mt-4">
+                                <h1 class="text-center text-white">Index</h1>
+                            </div>
+                            <div class="col d-flex flex-column p-0 mt-4">
+                                <div class="col-11">
+                                    <h1 class="text-center text-white">Data</h1>
+                                </div>
+                                <div id="key-container" class="d-flex flex-column p-0 input-group"></div>
+                            </div>
                         </div>
-                        <div id="route-input" class="d-flex flex-column p-0 input-group"></div>
                     </div>
                 </div>
             </div>
@@ -40,7 +47,7 @@
             </div>
         </form>
     </div>
-    <script type="module" src="../static/Launch/launchPage.mjs"></script>
+    <script type="module" src="../static/launchSandbox.mjs"></script>
 </body>
 
 </html>
