--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,11 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CS50X CAPSTONE</title>
+        <title>API Data Viewer</title>
 
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.2/dist/spacelab/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
     <!--     
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous"> 
