--- a/templates/sandbox.html
+++ b/templates/sandbox.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS50X CAPSTONE</title>
+    <title>API Data Viewer</title>
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.2/dist/morph/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
@@ -18,7 +18,6 @@
     <!-- Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
