--- a/templates/sandbox.html
+++ b/templates/sandbox.html
@@ -46,7 +46,7 @@
             </div>
         </form>
     </div>
-    <script type="module" src="../static/launchSandbox.mjs"></script>
+    <script type="module" src="../static/launchSandbox.js"></script>
 </body>
 
 </html>
