--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
         </form>
     </div>
     <script src="{{ url_for('static', filename='jquery.js') }}"></script>
-    <script src="../static/script.mjs" type="module"></script>
+    <script src="../static/script.js" type="module"></script>
 </body>
 
 </html>
